--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
-  background: #545c61;
-  background: radial-gradient(circle, #545c61 0%, #172930 100%);
+  background-color: transparent;
   flex-wrap: wrap;
   overflow-x: hidden;
 }
